requirements and update to example

--- a/Examples/example.ipynb
+++ b/Examples/example.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8e2d06f7",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,105 @@
       "    Gate evolution: 0.097s\n",
       "    Data collection: 18.599s\n",
       "\n",
-      "Iteration 2/10\n"
+      "Iteration 2/10\n",
+      "  Iteration time: 18.29s\n",
+      "    Initialization: 0.001s\n",
+      "    Gate evolution: 0.082s\n",
+      "    Data collection: 18.207s\n",
+      "\n",
+      "Iteration 3/10\n",
+      "  Iteration time: 18.03s\n",
+      "    Initialization: 0.001s\n",
+      "    Gate evolution: 0.083s\n",
+      "    Data collection: 17.945s\n",
+      "\n",
+      "Iteration 4/10\n",
+      "  Iteration time: 18.00s\n",
+      "    Initialization: 0.001s\n",
+      "    Gate evolution: 0.082s\n",
+      "    Data collection: 17.912s\n",
+      "\n",
+      "Iteration 5/10\n",
+      "  Iteration time: 17.82s\n",
+      "    Initialization: 0.001s\n",
+      "    Gate evolution: 0.084s\n",
+      "    Data collection: 17.740s\n",
+      "\n",
+      "Iteration 6/10\n",
+      "  Iteration time: 18.16s\n",
+      "    Initialization: 0.002s\n",
+      "    Gate evolution: 0.089s\n",
+      "    Data collection: 18.065s\n",
+      "\n",
+      "Iteration 7/10\n",
+      "  Iteration time: 17.92s\n",
+      "    Initialization: 0.001s\n",
+      "    Gate evolution: 0.082s\n",
+      "    Data collection: 17.836s\n",
+      "\n",
+      "Iteration 8/10\n",
+      "  Iteration time: 17.39s\n",
+      "    Initialization: 0.001s\n",
+      "    Gate evolution: 0.081s\n",
+      "    Data collection: 17.309s\n",
+      "\n",
+      "Iteration 9/10\n",
+      "  Iteration time: 17.50s\n",
+      "    Initialization: 0.001s\n",
+      "    Gate evolution: 0.080s\n",
+      "    Data collection: 17.419s\n",
+      "\n",
+      "Iteration 10/10\n",
+      "  Iteration time: 17.59s\n",
+      "    Initialization: 0.009s\n",
+      "    Gate evolution: 0.083s\n",
+      "    Data collection: 17.494s\n",
+      "\n",
+      "======================================================================\n",
+      "TIMING SUMMARY\n",
+      "======================================================================\n",
+      "\n",
+      "Per iteration averages (10 iterations):\n",
+      "  Gate evolution:   0.084s ± 0.005s\n",
+      "  Data collection:  17.853s ± 0.369s\n",
+      "  Total per iter:   17.937s\n",
+      "\n",
+      "Data collection breakdown (average per iteration):\n",
+      "  faf            : 10.905s ± 0.139s\n",
+      "  sre            : 6.867s ± 0.252s\n",
+      "  renyi10        : 0.022s ± 0.004s\n",
+      "  ess            : 0.015s ± 0.002s\n",
+      "  repulsion      : 0.015s ± 0.000s\n",
+      "  flatness       : 0.012s ± 0.001s\n",
+      "  sff            : 0.011s ± 0.000s\n",
+      "  porter_thomas  : 0.003s ± 0.000s\n",
+      "  ipr            : 0.002s ± 0.000s\n",
+      "\n",
+      "Total experiment time: 179.37s\n",
+      "  Gate evolution:   0.84s (0.5%)\n",
+      "  Data collection:  178.53s (99.5%)\n",
+      "\n",
+      "======================================================================\n",
+      "SAVING DATA\n",
+      "======================================================================\n",
+      "  Saved renyi10: results/clifford_after_matchgate/renyi10/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved faf: results/clifford_after_matchgate/faf/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved ipr: results/clifford_after_matchgate/ipr/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved ess: results/clifford_after_matchgate/ess/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved bonddim: results/clifford_after_matchgate/bonddim/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved flatness: results/clifford_after_matchgate/flatness/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved repulsion: results/clifford_after_matchgate/repulsion/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved sff: results/clifford_after_matchgate/sff/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved porter_thomas: results/clifford_after_matchgate/porter_thomas/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "  Saved sre: results/clifford_after_matchgate/sre/10qubits_10iter_10interval_20251120_110742.npy\n",
+      "\n",
+      "All data saved to results/clifford_after_matchgate/\n",
+      "\n",
+      "======================================================================\n",
+      "EXPERIMENT COMPLETE!\n",
+      "======================================================================\n",
+      "\n",
+      "Results saved to: results/clifford_after_matchgate/\n"
      ]
     }
    ],
